--- a/.github/workflows/wiz.yaml
+++ b/.github/workflows/wiz.yaml
@@ -29,9 +29,11 @@ jobs:
         WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
         WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
-    - name: Podman
+    - name: Start podman
       run: podman system service --time 120 &
+    - name: set docker host
       run: DOCKER_HOST=unix:///run/podman/podman.sock
+    - name: pull podman
       run: podman pull docker.io/library/mongo:latest' 
 
     - name: Run wiz-cli IaC scan
