--- a/.github/workflows/wiz.yaml
+++ b/.github/workflows/wiz.yaml
@@ -31,10 +31,12 @@ jobs:
 
     - name: Start podman
       run: podman system service --time 120 &
+
     - name: set docker host
       run: DOCKER_HOST=unix:///run/podman/podman.sock
+
     - name: pull podman
-      run: podman pull docker.io/library/mongo:latest' 
+      run: podman pull docker.io/library/mongo:latest 
 
     - name: Run wiz-cli IaC scan
       run: ./wizcli docker scan --image kolizo/kaniko-nginx:2.0
