--- a/.github/workflows/wiz.yaml
+++ b/.github/workflows/wiz.yaml
@@ -4,7 +4,7 @@ on: [pull_request,push]
 jobs:
   wiz-cli-iac-scan:
     name: 'Wiz-cli IaC Scan'
-    runs-on: quay.io/podman/stable
+    runs-on: quay.io/podman/stable:latest
     env:
       SCAN_PATH: "." # Set the relative path in the repo to scan
       POLICY: "Default IaC policy" # Set the desired Wiz-cli policy to use
